<resources>
    <string name="app_name">QuiltKeeper</string>
    <string name="date_finished">Date finished</string>
    <string name="enter_quilt_name">Enter quilt name</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="the_primary_quilt_photo">The primary quilt photo</string>
    <string name="navigate_back_to_main_activity">Navigate back to Main Activity</string>
    <string name="new_quilt">NEW QUILT</string>
    <string name="change_the_photo_you_selected">Change the photo you selected</string>
    <string name="pick_a_date_you_finished_the_quilt">Pick a date you finished the quilt</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="cost">Cost</string>
    <string name="calculate_cost_of_your_quilt">Calculate cost of your quilt</string>
    <string name="quilt_owner">Quilt owner</string>
    <string name="made_by">Made By</string>
    <string name="machine_used">Machine Used</string>
    <string name="frame">Frame</string>
    <string name="design">Design</string>
    <string name="number_of_stiches">Number of stiches</string>
    <string name="batting">Batting</string>
    <string name="save_quilt">Save Quilt</string>
    <string name="top_thread">Top Thread</string>
    <string name="top_thread_color">Top Thread Color</string>
    <string name="bobbin_thread">Bobbin Thread</string>
    <string name="bobbin_thread_color">Bobbin Thread Color</string>
    <string name="needle">Needle</string>
    <string name="spi">SPI</string>
    <string name="towa">Towa</string>
    <string name="top_tension">Top Tension</string>
    <string name="additional_notes">Additional Notes...</string>
    <string name="time_spent_on_project">Time Spent on Project</string>
    <string name="hh">HH</string>
    <string name="colon">:</string>
    <string name="ss">ss</string>
    <string name="mm">mm</string>
    <string name="selected_quilt">Selected Quilt</string>
    <string name="main_photo">Main photo</string>
    <string name="quilt_name">Quilt Name</string>
    <string name="date_finished_view">Date Finished</string>
    <string name="edit_quilt_name">Edit Quilt Name</string>
    <string name="edit_your_values">Edit your values...</string>
    <string name="enter_email_address">enter email address</string>
    <string name="enter_a_password">enter a password</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="enter_security_key">Enter Security Key</string>
    <string name="register">REGISTER</string>
    <string name="quilt_keeper">Quilt Keeper.</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="dropdown_menus">Dropdown Menus</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>

    <string-array name="master_list">
        <item>Made By</item>
        <item>Machine</item>
        <item>Frame</item>
        <item>Design</item>
        <item>Batting</item>
        <item>Top Thread</item>
        <item>Top Thread Color</item>
        <item>Bobbin</item>
        <item>Bobbin Color</item>
        <item>Needle</item>
        <item>SPI</item>
        <item>Towa</item>
        <item>Top Tension</item>
    </string-array>

    <string-array name="made_by_spinner">
        <item>Karla</item>
        <item>Karol</item>
        <item>Stephanie</item>
    </string-array>

    <string-array name="machine_spinner">
        <item>Amara 20</item>
        <item>DM</item>
        <item>Simply Sixteen</item>
    </string-array>

    <string-array name="frame_spinner">
        <item>Little Foot</item>
        <item>Studio 2</item>
    </string-array>

    <string-array name="design_spinner">
        <item>FM</item>
        <item>Panto</item>
        <item>Rulers</item>
        <item>Rulers/FM</item>
    </string-array>

    <string-array name="batting_array">
        <item>Autumn</item>
        <item>FairField 100% Cotton</item>
        <item>Katahdin Premium</item>
        <item>Pellon</item>
    </string-array>

    <string-array name="top_thread_array">
        <item>Fabulux #40</item>
        <item>SoFine/poly #50</item>
    </string-array>

    <string-array name="top_thread_color_array">
        <item>#402</item>
        <item>#403</item>
        <item>#408</item>
        <item>#429</item>
        <item>#436</item>
        <item>#524</item>
        <item>FB29</item>
    </string-array>

    <string-array name="bobbin_array">
        <item>Bottom Line</item>
        <item>DecoBob</item>
        <item>SoFine/Poly</item>
    </string-array>

    <string-array name="bobbin_color_array">
        <item>#118</item>
        <item>#616</item>
        <item>#622</item>
        <item>#624</item>
        <item>DB138</item>
        <item>DB302</item>
    </string-array>

    <string-array name="needle_array">
        <item>16</item>
        <item>18</item>
    </string-array>

    <string-array name="spi_array">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>18</item>
    </string-array>

    <string-array name="towa_array">
        <item>150</item>
        <item>170</item>
    </string-array>

    <string-array name="top_tension_array">
        <item>42</item>
        <item>43</item>
        <item>44</item>
    </string-array>

    <string-array name="string_values">
        <item>mQuiltName</item>
        <item>mFinishDate</item>
        <item>mCost</item>
        <item>mQuiltOwner</item>
        <item>mLength</item>
        <item>mWidth</item>
        <item>mStiches</item>
        <item>mHours</item>
        <item>mMinutes</item>
        <item>mSeconds</item>
        <item>mMadeBy</item>
        <item>mMachine</item>
        <item>mFrame</item>
        <item>mDesign</item>
        <item>mBatting</item>
        <item>mTopThread</item>
        <item>mTopThreadColor</item>
        <item>mBobbin</item>
        <item>mBobbinColor</item>
        <item>mNeedle</item>
        <item>mSPI</item>
        <item>mTowa</item>
        <item>mTopTension</item>
        <item>mNotes</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_quilt">Add a Quilt</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="visibility">visibility</string>
    <string name="add_new_quilt">Add New Quilt</string>
    <string name="add_or_change_photo">Add or Change Photo</string>
    <string name="add_or_remove_drop_down_menu_items">Add or Remove Drop Down Menu Items</string>
    <string name="check_before_deleting_quilt">Check Before Deleting Quilt</string>
    <string name="checking">Checking....</string>
    <string name="show_splash_page_on_start">Show Splash Page on Start</string>
    <string name="showing">Showing...</string>
    <string name="change_splash_page_photo">Change Splash Page Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="save_photo">Save Photo</string>
    <string name="check_before_deleting_investment">Check Before Deleting Investment</string>

</resources>