<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/app_bar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/collapsing_toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:contentScrim="?attr/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/backArrow"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_backarrow_white"
                    android:contentDescription="@string/navigate_back_to_main_activity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:layout_toEndOf="@id/backArrow"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/app_bar"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addRemoveSpinnerItems"
            android:text="@string/add_or_remove_drop_down_menu_items"
            android:textColor="@color/link_blue"
            android:textSize="18sp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_before_deleting_quilt"
                    android:textColor="@color/link_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checking"
                    android:id="@+id/checkDeleteView"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:id="@+id/switch_delete_quilt_check"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_before_deleting_investment"
                    android:textColor="@color/link_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checking"
                    android:id="@+id/checkDeleteInvestment" />

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:id="@+id/switch_delete_investment_check" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="80"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_splash_page_on_start"
                    android:textColor="@color/link_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/showing"
                    android:id="@+id/checkSplashView"/>

            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:id="@+id/switch_show_splash_page"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeSplashPhoto"
                android:textSize="18sp"
                android:textColor="@color/link_blue"
                android:text="@string/change_splash_page_photo"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>