<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/app_bar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/collapsing_toolbar"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:contentScrim="?attr/colorPrimary">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize">

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:id="@+id/menu"
                            android:layout_marginStart="10dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_menu"
                            android:contentDescription="@string/navigate_back_to_main_activity"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home"
                            android:layout_toEndOf="@id/menu"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:id="@+id/refresh"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="10dp"
                            android:src="@drawable/ic_refresh"/>

                    </RelativeLayout>

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchLayout"
                android:layout_below="@id/app_bar"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="80"
                            android:id="@+id/searchInput"
                            android:hint="Enter a word or phrase"/>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="20">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:id="@+id/search_button"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_search_word"/>

                        </RelativeLayout>

                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchWord"
                            android:text="Search Keyword"
                            android:textColor="@color/link_blue"
                            android:textSize="18sp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchDate"
                            android:text="Search Date"
                            android:textColor="@color/link_blue"
                            android:textSize="18sp"
                            android:layout_alignParentEnd="true"
                            android:visibility="invisible"
                            android:layout_marginEnd="10dp"/>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recycler_view"
                android:layout_below="@id/searchLayout"
                android:background="@color/light_gray"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fab"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="30dp"
                android:src="@drawable/ic_add"
                app:backgroundTint="@color/teal_200"
                android:contentDescription="@string/add_a_quilt" />

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/home_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>

